--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 .container-hero {
     width: 100%;
-    height: 40vh;
+    height: 60vh;
     background-color: #1f2937;
 }
 
@@ -52,7 +52,7 @@
 .container-nav{
     display: flex;
     font-size: 50px;
-    padding: 20px;
+    /* margin: 20px; */
     color: #f9faf8 ;
 }
 .navbar {
@@ -64,6 +64,9 @@
     font-size: 32px;
     padding: 20px;
     gap: 10px;
+    padding: 25px;
+    padding-left: 310px;
+    
 }
 
 li {
@@ -73,7 +76,13 @@ li {
 .container-hero{
     display: flex;
     color: #f9faf8 ;
-    padding: 150px;
+}
+
+.awesome {
+    padding: 120px;
+    margin-top: 50px;    
+    margin-left: 50px;
+
 }
 
 .bigger-awesome{
@@ -82,11 +91,44 @@ li {
 }
 .smaller-awesome{
     font-size: 18px;
+    margin-top: 10px;
 }
 
 .hero-image{
-    padding: 10px 150px;
-    height: 10px;
+    /* padding: 10px 150px; */
+    height: 30px;
     justify-content: center;
     align-items: center;
+    padding: 120px;
+    margin-top: 50px;    
+    margin-left: 50px;
 }
+
+#page-title{
+    padding: 12px;
+    padding-left: 170px;
+}
+
+/* #contact-but{
+    color: yellow;
+} */
+
+a:link {
+    text-decoration: none;
+    color: #e5e7eb;
+  }
+  
+  a:visited {
+    text-decoration: none;
+    color: #e5e7eb;
+
+  }
+  
+  a:hover {
+    text-decoration: none;
+    color:#3882f6;
+  }
+  
+  a:active {
+    text-decoration: underline;
+  }
