--- a/style.css
+++ b/style.css
@@ -132,3 +132,66 @@ a:link {
   a:active {
     text-decoration: underline;
   }
+
+  .button {
+    background-color: #3882f6;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 28px;
+    font-weight: bold;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 7px;
+    /* width: 20vh; */
+  }
+  #container-product {
+    align-items: center;
+  }
+  #product-title {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    text-align: center;
+    padding-top: 6vh;
+}
+
+.flex-gap {
+    display: flex;
+    justify-content: center;
+    margin-top: 5vh;
+    align-items: center;
+
+  }
+  
+  .flex-gap > div {
+    margin: 6px;
+    border-style: solid;
+    border-color: #1f2937;
+    justify-content: center;
+    /* padding: 30px; */
+    width: 20vh;
+    height: 20vh;
+    border-radius: 2vh;
+    justify-content: center;
+    justify-items: center;
+    margin: 1vh 3vh;
+  }
+
+  /* #item-picture {
+    max-width:100%;
+    max-height:100%;
+    object-fit: fill;
+
+  } */
+
+  .item-picture {
+    width: 100%; /* or any custom size */
+    height: 100%; 
+    object-fit: fill;
+    border-radius: 1.6vh;
+}
