--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+
 * {
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 .container-nav {
     width: 100%;
@@ -11,6 +13,7 @@
     width: 100%;
     height: 60vh;
     background-color: #1f2937;
+    padding: 6vh 0vh;
 }
 
 .container-product {
@@ -56,8 +59,7 @@
     color: #f9faf8 ;
 }
 .navbar {
-    justify-content: right;
-    justify-items: center;
+
     display: flex;
     flex-direction: row;
     list-style: none;
@@ -65,7 +67,8 @@
     padding: 20px;
     gap: 10px;
     padding: 25px;
-    padding-left: 310px;
+    padding-left: ;
+    
     
 }
 
@@ -79,9 +82,7 @@ li {
 }
 
 .awesome {
-    padding: 120px;
-    margin-top: 50px;    
-    margin-left: 50px;
+    margin: 165px ;
 
 }
 
@@ -95,13 +96,9 @@ li {
 }
 
 .hero-image{
-    /* padding: 10px 150px; */
-    height: 30px;
     justify-content: center;
     align-items: center;
-    padding: 120px;
-    margin-top: 50px;    
-    margin-left: 50px;
+    margin: 165px;
 }
 
 #page-title{
@@ -109,9 +106,6 @@ li {
     padding-left: 170px;
 }
 
-/* #contact-but{
-    color: yellow;
-} */
 
 a:link {
     text-decoration: none;
@@ -182,12 +176,7 @@ a:link {
     margin: 1vh 3vh;
   }
 
-  /* #item-picture {
-    max-width:100%;
-    max-height:100%;
-    object-fit: fill;
 
-  } */
 
   .item-picture {
     width: 100%; /* or any custom size */
@@ -195,3 +184,60 @@ a:link {
     object-fit: fill;
     border-radius: 1.6vh;
 }
+
+.container-quote > blockquote{
+    text-align: center;
+    font-size: 36px;
+    font-weight: light;
+    font-style: italic;
+    color: #1f2937 ;
+    padding: 150px;
+}
+
+.container-quote {
+    align-items: center;
+    align-content: center;
+    margin: auto auto;
+}
+
+.container-footer {
+    color: #e5e7eb;
+    font-size: 32px;
+    /* font-weight: ; */
+    text-align: center;
+}
+
+.container-footer > p {
+    padding: 2vh;
+}
+
+.quote {
+    align-items: center;
+    padding: 55px 30px;
+    margin: auto auto;
+    font-size: 36px;
+    color: #e5e7eb;
+}
+
+.button-sign {
+    background-color: #3882f6;
+    /* border: none; */
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 28px;
+    font-weight: bold;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 15px;
+    border-color: #e5e7eb;
+    border-width: 5px;
+    margin-top: 7px;
+  }
+
+  #call-to-action {
+    font-weight: bold;
+  }
+
